--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,4 +4,11 @@ spring.datasource.url=jdbc:mysql://localhost:3306/curlsie
 spring.datasource.username=root
 spring.datasource.password=root
 
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.sql.init.mode=always
+spring.jpa.hibernate.ddl-auto=update
 
+
+spring.mvc.view.prefix=/WEB-INF/jsp/
+spring.mvc.view.suffix=.jsp
